--- a/main.ipynb
+++ b/main.ipynb
@@ -580,15 +580,15 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>257937</th>\n",
-       "      <td>2017-07-22T19:03:32.667379-0500</td>\n",
-       "      <td>2.127578e+14</td>\n",
-       "      <td>2333133.0</td>\n",
+       "      <th>377138</th>\n",
+       "      <td>2017-07-22T19:15:30.590909-0500</td>\n",
+       "      <td>1.318431e+15</td>\n",
+       "      <td>2730690.0</td>\n",
        "      <td>dns</td>\n",
        "      <td>140.0</td>\n",
-       "      <td>2001:0dbb:0c18:0014:34fa:4d67:66fe:82e9</td>\n",
-       "      <td>58026.0</td>\n",
-       "      <td>0000:0000:0000:0000:0000:ffff:c0a8:16a8</td>\n",
+       "      <td>192.168.204.60</td>\n",
+       "      <td>57925.0</td>\n",
+       "      <td>192.168.207.4</td>\n",
        "      <td>53.0</td>\n",
        "      <td>UDP</td>\n",
        "      <td>...</td>\n",
@@ -604,16 +604,16 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>365446</th>\n",
-       "      <td>2017-07-22T19:22:06.956083-0500</td>\n",
-       "      <td>1.628171e+15</td>\n",
-       "      <td>2939243.0</td>\n",
+       "      <th>469650</th>\n",
+       "      <td>2017-07-22T19:29:19.376875-0500</td>\n",
+       "      <td>2.205691e+15</td>\n",
+       "      <td>3355392.0</td>\n",
        "      <td>dns</td>\n",
-       "      <td>180.0</td>\n",
+       "      <td>150.0</td>\n",
        "      <td>192.168.207.4</td>\n",
        "      <td>53.0</td>\n",
-       "      <td>192.168.198.62</td>\n",
-       "      <td>54310.0</td>\n",
+       "      <td>192.168.205.188</td>\n",
+       "      <td>58786.0</td>\n",
        "      <td>UDP</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
@@ -634,24 +634,20 @@
       ],
       "text/plain": [
        "                              timestamp       flow_id   pcap_cnt event_type  \\\n",
-       "257937  2017-07-22T19:03:32.667379-0500  2.127578e+14  2333133.0        dns   \n",
-       "365446  2017-07-22T19:22:06.956083-0500  1.628171e+15  2939243.0        dns   \n",
+       "377138  2017-07-22T19:15:30.590909-0500  1.318431e+15  2730690.0        dns   \n",
+       "469650  2017-07-22T19:29:19.376875-0500  2.205691e+15  3355392.0        dns   \n",
        "\n",
-       "         vlan                                   src_ip  src_port  \\\n",
-       "257937  140.0  2001:0dbb:0c18:0014:34fa:4d67:66fe:82e9   58026.0   \n",
-       "365446  180.0                            192.168.207.4      53.0   \n",
+       "         vlan          src_ip  src_port          dest_ip  dest_port proto  \\\n",
+       "377138  140.0  192.168.204.60   57925.0    192.168.207.4       53.0   UDP   \n",
+       "469650  150.0   192.168.207.4      53.0  192.168.205.188    58786.0   UDP   \n",
        "\n",
-       "                                        dest_ip  dest_port proto  ... vars  \\\n",
-       "257937  0000:0000:0000:0000:0000:ffff:c0a8:16a8       53.0   UDP  ...  NaN   \n",
-       "365446                           192.168.198.62    54310.0   UDP  ...  NaN   \n",
+       "        ... vars flow icmp_type  icmp_code  tcp smtp email app_proto_tc  \\\n",
+       "377138  ...  NaN  NaN       NaN        NaN  NaN  NaN   NaN          NaN   \n",
+       "469650  ...  NaN  NaN       NaN        NaN  NaN  NaN   NaN          NaN   \n",
        "\n",
-       "       flow icmp_type  icmp_code  tcp smtp email app_proto_tc app_proto_ts  \\\n",
-       "257937  NaN       NaN        NaN  NaN  NaN   NaN          NaN          NaN   \n",
-       "365446  NaN       NaN        NaN  NaN  NaN   NaN          NaN          NaN   \n",
-       "\n",
-       "       stats  \n",
-       "257937   NaN  \n",
-       "365446   NaN  \n",
+       "       app_proto_ts stats  \n",
+       "377138          NaN   NaN  \n",
+       "469650          NaN   NaN  \n",
        "\n",
        "[2 rows x 28 columns]"
       ]
@@ -1085,7 +1081,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\laury\\AppData\\Local\\Temp\\ipykernel_16488\\1166767984.py:4: FutureWarning: pandas.io.json.json_normalize is deprecated, use pandas.json_normalize instead.\n",
+      "C:\\Users\\marti\\AppData\\Local\\Temp\\ipykernel_3296\\1166767984.py:4: FutureWarning: pandas.io.json.json_normalize is deprecated, use pandas.json_normalize instead.\n",
       "  df = json_normalize(registros_dns)\n"
      ]
     },
@@ -1146,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1277,7 +1273,7 @@
        "[2849 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1316,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1443,7 @@
        "[2826 rows x 3 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1473,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1482,7 +1478,7 @@
        "166"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1508,46 +1504,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\laury\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.0.2 when using version 1.1.3. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\laury\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\base.py:493: FutureWarning: The feature names should match those that were passed during fit. Starting version 1.2, an error will be raised.\n",
-      "Feature names unseen at fit time:\n",
-      "- dns.rrname\n",
-      "- dns.rrtype\n",
-      "\n",
-      "  warnings.warn(message, FutureWarning)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'api.wunderground.com'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mclasificador\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[1;32m----> 2\u001b[0m newData \u001b[39m=\u001b[39m clasificacion(dga)\n",
-      "File \u001b[1;32mc:\\Users\\laury\\Documents\\UVG\\Redes\\lab09_Threat-Hunting\\clasificador.py:138\u001b[0m, in \u001b[0;36mclasificacion\u001b[1;34m(dataframe)\u001b[0m\n\u001b[0;32m    135\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(Pkl_Filename, \u001b[39m'\u001b[39m\u001b[39mrb\u001b[39m\u001b[39m'\u001b[39m) \u001b[39mas\u001b[39;00m file:  \n\u001b[0;32m    136\u001b[0m     Pickled_LR_Model \u001b[39m=\u001b[39m pickle\u001b[39m.\u001b[39mload(file)\n\u001b[1;32m--> 138\u001b[0m prediccion \u001b[39m=\u001b[39m Pickled_LR_Model\u001b[39m.\u001b[39;49mpredict(df_final)\n\u001b[0;32m    140\u001b[0m df_final[\u001b[39m'\u001b[39m\u001b[39mdomain_tld\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m df_domain\n\u001b[0;32m    141\u001b[0m df_final[\u001b[39m'\u001b[39m\u001b[39misDGA\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m prediccion\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\tree\\_classes.py:505\u001b[0m, in \u001b[0;36mBaseDecisionTree.predict\u001b[1;34m(self, X, check_input)\u001b[0m\n\u001b[0;32m    482\u001b[0m \u001b[39m\"\"\"Predict class or regression value for X.\u001b[39;00m\n\u001b[0;32m    483\u001b[0m \n\u001b[0;32m    484\u001b[0m \u001b[39mFor a classification model, the predicted class for each sample in X is\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    502\u001b[0m \u001b[39m    The predicted classes, or the predict values.\u001b[39;00m\n\u001b[0;32m    503\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    504\u001b[0m check_is_fitted(\u001b[39mself\u001b[39m)\n\u001b[1;32m--> 505\u001b[0m X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_X_predict(X, check_input)\n\u001b[0;32m    506\u001b[0m proba \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtree_\u001b[39m.\u001b[39mpredict(X)\n\u001b[0;32m    507\u001b[0m n_samples \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mshape[\u001b[39m0\u001b[39m]\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\tree\\_classes.py:471\u001b[0m, in \u001b[0;36mBaseDecisionTree._validate_X_predict\u001b[1;34m(self, X, check_input)\u001b[0m\n\u001b[0;32m    469\u001b[0m \u001b[39m\"\"\"Validate the training data on predict (probabilities).\"\"\"\u001b[39;00m\n\u001b[0;32m    470\u001b[0m \u001b[39mif\u001b[39;00m check_input:\n\u001b[1;32m--> 471\u001b[0m     X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_validate_data(X, dtype\u001b[39m=\u001b[39;49mDTYPE, accept_sparse\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mcsr\u001b[39;49m\u001b[39m\"\u001b[39;49m, reset\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m    472\u001b[0m     \u001b[39mif\u001b[39;00m issparse(X) \u001b[39mand\u001b[39;00m (\n\u001b[0;32m    473\u001b[0m         X\u001b[39m.\u001b[39mindices\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m np\u001b[39m.\u001b[39mintc \u001b[39mor\u001b[39;00m X\u001b[39m.\u001b[39mindptr\u001b[39m.\u001b[39mdtype \u001b[39m!=\u001b[39m np\u001b[39m.\u001b[39mintc\n\u001b[0;32m    474\u001b[0m     ):\n\u001b[0;32m    475\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mNo support for np.int64 index based sparse matrices\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\base.py:577\u001b[0m, in \u001b[0;36mBaseEstimator._validate_data\u001b[1;34m(self, X, y, reset, validate_separately, **check_params)\u001b[0m\n\u001b[0;32m    575\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mValidation should be done on X, y or both.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    576\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m no_val_y:\n\u001b[1;32m--> 577\u001b[0m     X \u001b[39m=\u001b[39m check_array(X, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mX\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mcheck_params)\n\u001b[0;32m    578\u001b[0m     out \u001b[39m=\u001b[39m X\n\u001b[0;32m    579\u001b[0m \u001b[39melif\u001b[39;00m no_val_X \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m no_val_y:\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\sklearn\\utils\\validation.py:856\u001b[0m, in \u001b[0;36mcheck_array\u001b[1;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001b[0m\n\u001b[0;32m    854\u001b[0m         array \u001b[39m=\u001b[39m array\u001b[39m.\u001b[39mastype(dtype, casting\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39munsafe\u001b[39m\u001b[39m\"\u001b[39m, copy\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n\u001b[0;32m    855\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[1;32m--> 856\u001b[0m         array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49masarray(array, order\u001b[39m=\u001b[39;49morder, dtype\u001b[39m=\u001b[39;49mdtype)\n\u001b[0;32m    857\u001b[0m \u001b[39mexcept\u001b[39;00m ComplexWarning \u001b[39mas\u001b[39;00m complex_warning:\n\u001b[0;32m    858\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    859\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mComplex data not supported\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(array)\n\u001b[0;32m    860\u001b[0m     ) \u001b[39mfrom\u001b[39;00m \u001b[39mcomplex_warning\u001b[39;00m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\pandas\\core\\generic.py:2070\u001b[0m, in \u001b[0;36mNDFrame.__array__\u001b[1;34m(self, dtype)\u001b[0m\n\u001b[0;32m   2069\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__array__\u001b[39m(\u001b[39mself\u001b[39m, dtype: npt\u001b[39m.\u001b[39mDTypeLike \u001b[39m|\u001b[39m \u001b[39mNone\u001b[39;00m \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m np\u001b[39m.\u001b[39mndarray:\n\u001b[1;32m-> 2070\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39;49masarray(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_values, dtype\u001b[39m=\u001b[39;49mdtype)\n",
-      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: 'api.wunderground.com'"
+      "None\n"
      ]
     }
    ],
    "source": [
     "from clasificador import *\n",
-    "newData = clasificacion(dga)\n",
-    "newData"
+    "daDF = pd.DataFrame(unique_records_domain)\n",
+    "daDF = daDF.rename(columns={'0': 'domain_tld'}, inplace=True)\n",
+    "\n",
+    "newData = clasificacion(daDF)\n",
+    "newData\n"
    ]
   },
   {
@@ -1630,7 +1604,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (microsoft store)",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1644,12 +1618,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b2e82e792ab2fe1f79a1681212c8a0df90a82b1b30c69f8528b93f57968011e2"
+    "hash": "e7ccb2a435b656723dafd2fb88eb02b6891256ab8b77d2cf3044cea9811453d0"
    }
   }
  },
