--- a/main.ipynb
+++ b/main.ipynb
@@ -1504,24 +1504,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "None\n"
+      "c:\\Users\\marti\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.0.2 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>domain_tld</th>\n",
+       "      <th>isDGA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>api.wunderground.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>stork79.dropbox.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>hpca-tier2.office.aol.com.ad.aol.aoltw.net</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>safebrowsing.clients.google.com.home</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fxfeeds.mozilla.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>aoldtcmds01.office.aol.com.ad.aol.aoltw.net</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>ntp.ubuntu.com.localdomain</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>redir.metaservices.microsoft.com</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>164</th>\n",
+       "      <td>ocsp.verisign.com</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>client-software.real.com</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>166 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      domain_tld  isDGA\n",
+       "0                           api.wunderground.com      1\n",
+       "1                            stork79.dropbox.com      1\n",
+       "2     hpca-tier2.office.aol.com.ad.aol.aoltw.net      0\n",
+       "3           safebrowsing.clients.google.com.home      0\n",
+       "4                            fxfeeds.mozilla.com      1\n",
+       "..                                           ...    ...\n",
+       "161  aoldtcmds01.office.aol.com.ad.aol.aoltw.net      1\n",
+       "162                   ntp.ubuntu.com.localdomain      1\n",
+       "163             redir.metaservices.microsoft.com      0\n",
+       "164                            ocsp.verisign.com      0\n",
+       "165                     client-software.real.com      0\n",
+       "\n",
+       "[166 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from clasificador import *\n",
+    "\n",
     "daDF = pd.DataFrame(unique_records_domain)\n",
-    "daDF = daDF.rename(columns={'0': 'domain_tld'}, inplace=True)\n",
+    "daDF.rename(columns={0: 'domain_tld'}, inplace=True)\n",
     "\n",
     "newData = clasificacion(daDF)\n",
-    "newData\n"
+    "newData\n",
+    "# daDF\n"
    ]
   },
   {
@@ -1533,10 +1644,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>domain_tld</th>\n",
+       "      <th>isDGA</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>api.wunderground.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>stork79.dropbox.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fxfeeds.mozilla.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>aolmtcmxm03.office.aol.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>aolmtcmxm02.office.aol.com.ad.aol.aoltw.net</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>158</th>\n",
+       "      <td>192.168.21-28.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>159</th>\n",
+       "      <td>ejfodfmfxlkgifuf.xyz</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>aoldtcmds01.office.aol.com</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>aoldtcmds01.office.aol.com.ad.aol.aoltw.net</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>162</th>\n",
+       "      <td>ntp.ubuntu.com.localdomain</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>70 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      domain_tld  isDGA\n",
+       "0                           api.wunderground.com      1\n",
+       "1                            stork79.dropbox.com      1\n",
+       "4                            fxfeeds.mozilla.com      1\n",
+       "6                     aolmtcmxm03.office.aol.com      1\n",
+       "7    aolmtcmxm02.office.aol.com.ad.aol.aoltw.net      1\n",
+       "..                                           ...    ...\n",
+       "158                              192.168.21-28.0      1\n",
+       "159                         ejfodfmfxlkgifuf.xyz      1\n",
+       "160                   aoldtcmds01.office.aol.com      1\n",
+       "161  aoldtcmds01.office.aol.com.ad.aol.aoltw.net      1\n",
+       "162                   ntp.ubuntu.com.localdomain      1\n",
+       "\n",
+       "[70 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "filteredDga = newData[newData['isDGA'] == 1]\n",
+    "filteredDga"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1550,6 +1772,51 @@
    "metadata": {},
    "source": [
     "Utilizando la lista de Cisco Umbrella incluido en Flare, indique si los dominios encontrados por el  clasificador  DGA de  la  parte  2  se  encuentran  en  este  top  1000000. Deberíamos  haber reducido los registros a 12! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\marti\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3620\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mc:\\Users\\marti\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\Users\\marti\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:2131\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:2140\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 2",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\marti\\OneDrive\\Documentos\\Docs\\Universidad\\4to Ano\\2do Semestre\\Redes\\Lab9\\lab09_Threat-Hunting\\main.ipynb Cell 32\u001b[0m in \u001b[0;36m<cell line: 9>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/marti/OneDrive/Documentos/Docs/Universidad/4to%20Ano/2do%20Semestre/Redes/Lab9/lab09_Threat-Hunting/main.ipynb#X43sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(filteredDga)):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marti/OneDrive/Documentos/Docs/Universidad/4to%20Ano/2do%20Semestre/Redes/Lab9/lab09_Threat-Hunting/main.ipynb#X43sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m   \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(umbrellaList)):\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/marti/OneDrive/Documentos/Docs/Universidad/4to%20Ano/2do%20Semestre/Redes/Lab9/lab09_Threat-Hunting/main.ipynb#X43sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m     \u001b[39mif\u001b[39;00m (filteredDga[\u001b[39m'\u001b[39;49m\u001b[39mdomain_tld\u001b[39;49m\u001b[39m'\u001b[39;49m][i] \u001b[39m==\u001b[39m umbrellaList[\u001b[39m'\u001b[39m\u001b[39mdomain\u001b[39m\u001b[39m'\u001b[39m][j]):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marti/OneDrive/Documentos/Docs/Universidad/4to%20Ano/2do%20Semestre/Redes/Lab9/lab09_Threat-Hunting/main.ipynb#X43sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m       matches\u001b[39m.\u001b[39mappend(filteredDga[\u001b[39m'\u001b[39m\u001b[39mdomain_tld\u001b[39m\u001b[39m'\u001b[39m][i])\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/marti/OneDrive/Documentos/Docs/Universidad/4to%20Ano/2do%20Semestre/Redes/Lab9/lab09_Threat-Hunting/main.ipynb#X43sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m matches\n",
+      "File \u001b[1;32mc:\\Users\\marti\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\series.py:958\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    955\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_values[key]\n\u001b[0;32m    957\u001b[0m \u001b[39melif\u001b[39;00m key_is_scalar:\n\u001b[1;32m--> 958\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_value(key)\n\u001b[0;32m    960\u001b[0m \u001b[39mif\u001b[39;00m is_hashable(key):\n\u001b[0;32m    961\u001b[0m     \u001b[39m# Otherwise index.get_value will raise InvalidIndexError\u001b[39;00m\n\u001b[0;32m    962\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m    963\u001b[0m         \u001b[39m# For labels that don't resolve as scalars like tuples and frozensets\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\marti\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\series.py:1069\u001b[0m, in \u001b[0;36mSeries._get_value\u001b[1;34m(self, label, takeable)\u001b[0m\n\u001b[0;32m   1066\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_values[label]\n\u001b[0;32m   1068\u001b[0m \u001b[39m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[1;32m-> 1069\u001b[0m loc \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindex\u001b[39m.\u001b[39;49mget_loc(label)\n\u001b[0;32m   1070\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex\u001b[39m.\u001b[39m_get_values_for_loc(\u001b[39mself\u001b[39m, loc, label)\n",
+      "File \u001b[1;32mc:\\Users\\marti\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3621\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3623\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3624\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3625\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3626\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3627\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3628\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 2"
+     ]
+    }
+   ],
+   "source": [
+    "umbrellaList = pd.read_csv('flare/data/umbrella/top-1m.csv')\n",
+    "umbrellaList.rename(columns={'netflix.com': 'domain'}, inplace=True)\n",
+    "\n",
+    "# print(type(umbrellaList['domain'][0]))\n",
+    "# print(type(filteredDga['domain_tld'][0]))\n",
+    "\n",
+    "matches = []\n",
+    "\n",
+    "for i in range(len(filteredDga)):\n",
+    "  for j in range(len(umbrellaList)):\n",
+    "    if (filteredDga['domain_tld'][i] == umbrellaList['domain'][j]):\n",
+    "      matches.append(filteredDga['domain_tld'][i])\n",
+    "\n",
+    "matches"
    ]
   },
   {
